# DndBuilder

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
core/: .env.example
core/apps/character_builder/: apps.py
core/apps/character_library/: apps.py
core/apps/knowledge_base/: admin.py  apps.py  models.py
core/apps/knowledge_base/migrations/: 0001_initial.py  0002_alter_characteristic_options_skill.py  0003_language_alter_characteristic_title_and_more.py  0004_language_script_language_speakers_language_type.py  0005_section_source_characteristic_section_and_more.py  0006_alter_characteristic_section_and_more.py  0007_coin_die.py  0008_coin_short_title.py  0009_die_modifier.py  0010_alter_die_options_alter_characteristic_section_and_more.py
core/apps/user_profiles/: apps.py
core/project/: urls.py
core/project/settings/: main.py
