[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Elena Vedeneva <astroshelest@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
django-ninja = "^1.1.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
